---------------------------------------------------------------------------------------------------
Version: 1.3.15
Date: ????
  Changes:
    - Fixed missing migration handlers
    - Removed eccentric globals
    - Added entity validation to more processes to avoid potential issues
---------------------------------------------------------------------------------------------------
Version: 1.3.14
Date: 2025-12-21
  Changes:
    - Added custom tooltip fields
---------------------------------------------------------------------------------------------------
Version: 1.3.13
Date: 2025-10-30
  Bugfixes:
    - Fixed a crash when indexing a nonexistant value
---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 2025-10-30
  Changes:
    - Updated validity check function to be more reliable and less likely to crash
---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 2025-10-30
  Bugfixes:
    - Fixed a crash since the validity funciton... doesn't check validity
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2025-10-18
  Bugfixes:
    - Blanket bugfixes due to malformed migration data
    - Fixed issues surrounding orphan entities from malformed migration data (see log file to find out how many ninjas were removed)
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2025-09-27
  Bugfixes:
    - Fixed a crash when trying to migrate entities
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2025-08-28
  Bugfixes:
    - Fixed a crash introduced in the last version
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2025-08-28
  Features: