@@ -5,6 +5,7 @@ Date: ????
     - Fixed missing migration handlers
     - Removed eccentric globals
     - Added entity validation to more processes to avoid potential issues
+    - Removed restriction that beacon_power_usage_multiplier and crafting_machine_energy_usage_multiplier must match for a given quality
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.14
 Date: 2025-12-21
